// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Grid stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="grid grid-cols-3 gap-4"
    data-slot="grid"
  >
    <div
      class="bg-muted p-4 rounded"
    >
      Item 1
    </div>
    <div
      class="bg-muted p-4 rounded"
    >
      Item 2
    </div>
    <div
      class="bg-muted p-4 rounded"
    >
      Item 3
    </div>
  </div>
</div>
`;

exports[`Grid stories snapshot > InlineGrid story renders and matches snapshot 1`] = `
<div>
  <div
    class="inline-grid grid-cols-2 gap-2"
    data-slot="grid"
  >
    <div
      class="bg-muted p-2 rounded"
    >
      A
    </div>
    <div
      class="bg-muted p-2 rounded"
    >
      B
    </div>
  </div>
</div>
`;

exports[`Grid stories snapshot > TwoColumns story renders and matches snapshot 1`] = `
<div>
  <div
    class="grid grid-cols-2 gap-4"
    data-slot="grid"
  >
    <div
      class="bg-muted p-4 rounded"
    >
      Item 1
    </div>
    <div
      class="bg-muted p-4 rounded"
    >
      Item 2
    </div>
  </div>
</div>
`;

exports[`Grid stories snapshot > WithFlow story renders and matches snapshot 1`] = `
<div>
  <div
    class="grid grid-cols-3 grid-flow-dense gap-4"
    data-slot="grid"
  >
    <div
      class="bg-muted p-4 rounded"
    >
      Item 1
    </div>
    <div
      class="bg-muted p-4 rounded"
    >
      Item 2
    </div>
    <div
      class="bg-muted p-4 rounded"
    >
      Item 3
    </div>
    <div
      class="bg-muted p-4 rounded"
    >
      Item 4
    </div>
  </div>
</div>
`;
